syntax = "proto3";

package sample_service;

option go_package = "pkg/grpc";

service MatchService {
    rpc FindMatch(MatchRequest) returns (stream MatchResponse);
}

message MatchRequest {
    string player_id = 1;
}

message MatchResponse {
    string message = 1;
    string room_id = 2;
}

